@@ -1,45 +1,33 @@
 package com.example.dw.application;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.Mockito;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 
-import com.example.dw.infrastructure.persistence.HrOrganizationRepository;
 import com.example.dw.domain.HrOrganizationEntity;
+import com.example.dw.infrastructure.persistence.HrOrganizationRepository;
 
-@ExtendWith(MockitoExtension.class)
 class DefaultOrganizationRowScopeStrategyTest {
 
-    @Mock
-    HrOrganizationRepository repository;
-
-    @InjectMocks
-    DefaultOrganizationRowScopeStrategy strategy;
+    HrOrganizationRepository repo = Mockito.mock(HrOrganizationRepository.class);
+    DefaultOrganizationRowScopeStrategy strategy = new DefaultOrganizationRowScopeStrategy(repo);
 
     @Test
-    @DisplayName("조직 코드와 페이지 정보를 사용해 리포지토리를 조회하고 노드로 매핑한다")
-    void appliesRepositoryAndMapsNode() {
-        var pageable = PageRequest.of(0, 5);
+    @DisplayName("Given 조직코드 When apply 호출 Then 레포지토리 결과를 DwOrganizationNode로 변환한다")
+    void applyReturnsNodes() {
         HrOrganizationEntity entity = new HrOrganizationEntity();
-        entity.setOrganizationCode("ORG");
-        entity.setName("Org");
-        entity.setVersion(1);
-        when(repository.findByOrganizationCode("ORG", pageable))
-                .thenReturn(new PageImpl<>(java.util.List.of(entity), pageable, 1));
+        entity.setOrganizationCode("ORG1");
+        Page<HrOrganizationEntity> page = new PageImpl<>(java.util.List.of(entity));
+        when(repo.findByOrganizationCode(Mockito.eq("ORG1"), Mockito.any())).thenReturn(page);
 
-        var page = strategy.apply(pageable, "ORG");
-
-        assertThat(page.getTotalElements()).isEqualTo(1);
-        assertThat(page.getContent().getFirst().organizationCode()).isEqualTo("ORG");
-        verify(repository).findByOrganizationCode("ORG", pageable);
+        Page<DwOrganizationNode> result = strategy.apply(PageRequest.of(0, 10), "ORG1");
+        assertThat(result.getContent()).hasSize(1);
+        assertThat(result.getContent().get(0).organizationCode()).isEqualTo("ORG1");
     }
 }
